force-app/main/default/objects/Cobro_unidad__c/Cobro_unidad__c.object-meta.xml
<CustomObject>
    <label>Plan de pago</label>
    <nameField>
        <label>Cuota</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan de pagos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>