force-app/main/default/objects/Cobro_unidad__c/fields/Caja__c.field-meta.xml
<CustomField>
    <fullName>Caja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caja</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Caja__c.Moneda__c</field>
            <operation>equals</operation>
            <valueField>$Source.Moneda__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Caja__c</referenceTo>
    <relationshipLabel>Plan de pagos</relationshipLabel>
    <relationshipName>Plan_de_pagos</relationshipName>
    <type>Lookup</type>
</CustomField>