force-app/main/default/objects/Cobro_unidad__c/fields/Estado_del_cobro__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_cobro__c</fullName>
    <label>Estado del cobro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impactado</fullName>
                <default>true</default>
                <label>Impactado</label>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>