force-app/main/default/objects/Cobro_unidad__c/fields/Fecha_cobro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cobro__c</fullName>
    <label>Fecha cobro</label>
    <type>Date</type>
</CustomField>