force-app/main/default/objects/Cobro_unidad__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moneda</label>
    <referenceTo>Moneda__c</referenceTo>
    <relationshipName>Cobro_unidades</relationshipName>
    <type>Lookup</type>
</CustomField>