force-app/main/default/objects/Cobro_unidad__c/fields/Movimiento_de_caja__c.field-meta.xml
<CustomField>
    <fullName>Movimiento_de_caja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movimiento de caja</label>
    <referenceTo>Movimiento_de_caja__c</referenceTo>
    <relationshipLabel>Plan de pagos</relationshipLabel>
    <relationshipName>Plan_de_pagos</relationshipName>
    <type>Lookup</type>
</CustomField>