force-app/main/default/objects/Cobro_unidad__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <label>Unidad</label>
    <referenceTo>Unidad__c</referenceTo>
    <relationshipLabel>Plan de pagos</relationshipLabel>
    <relationshipName>Cobro_unidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>