force-app/main/default/objects/Cobro_unidad__c/fields/Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Vencimiento__c</fullName>
    <label>Vencimiento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>